[gd_scene load_steps=4 format=3 uid="uid://cnms7nr8vt8cb"]

[ext_resource type="Script" path="res://src/hud/hud.gd" id="1_nk5aj"]
[ext_resource type="FontFile" uid="uid://7prgobfxql3c" path="res://src/hud/assets/AGoblinAppears-o2aV.ttf" id="2_p6xur"]
[ext_resource type="Texture2D" uid="uid://c3ghrripf4x67" path="res://src/hud/assets/Reload.png" id="3_3q238"]

[node name="HUD" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_nk5aj")

[node name="ScoreLabel" type="Label" parent="."]
texture_filter = 5
offset_left = 8.0
offset_top = 141.0
offset_right = 142.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_p6xur")
theme_override_font_sizes/font_size = 7
text = " Score: 0"
vertical_alignment = 1
clip_text = true

[node name="MessageLabel" type="Label" parent="."]
visible = false
texture_filter = 5
offset_left = 3.0
offset_top = -1.0
offset_right = 282.0
offset_bottom = 157.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_p6xur")
theme_override_font_sizes/font_size = 21
text = "You died!"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 265.0
offset_top = 143.0
offset_right = 281.0
offset_bottom = 159.0
texture_normal = ExtResource("3_3q238")

[connection signal="pressed" from="TextureButton" to="." method="_on_reload_pressed"]
